# ESP32_STP_PID_DISP

./: CMakeLists.txt
fonts/: ILMH16XB__.FNT  RUS16.FNT.fnt
main/: CMakeLists.txt  config.c  config.h  control.c  control.h  main.c  pressure_regulator.c  pressure_regulator.h  pressure_sensor.c  pressure_sensor.h  st7789.c  st7789.h  wifi_tcp.cpp  wifi_tcp.h
